# mddatasetbuilder

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  README.md  appveyor.yml  circle.yml  codecov.yml  pyproject.toml  setup.py  tox.ini
.github/: main.workflow
.github/workflows/: push.yml  pyright.yml  release.yml  test.yml
MDDatasetMaker/: .__init__.py.swo  .__init__.py.swp  __init__.py
docs/: CNAME  README.md
mddatasetbuilder/: __init__.py  __main__.py  _logger.py  c_stack.cpp  c_stack.h  datasetbuilder.py  deepmd.py  detect.py  dps.pyi  dps.pyx  qmcalc.py  test.json  test.py  utils.py
mddatasetbuilder/test/: __init__.py  test.json  test_datasetbuilder.py
tests/: test.json  test_bond.py  test_cli.py  test_datasetbuilder.py
